--- a/src/main/resources/templates/Create/createMusician.html
+++ b/src/main/resources/templates/Create/createMusician.html
@@ -4,7 +4,6 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body class="gradient-background" th:inline="text">
 <div th:include="fragments/navbar :: navHome"></div>
-<div class="page-flexbox-wrapper">
 
     <main class="musicSignup">
 
@@ -14,13 +13,12 @@
             <div class="row">
                 <div class="col s12 m6 logoSide center-align ">
                     <div class="logoSide">
-                        <h1 class="loginLogo"> <a href="/" >gigFinder</a></h1>
+                        <h1 class="login-logo"> <a href="/" >gigFinder</a></h1>
                         <h5 class="white-text"> Musician Signup</h5>
                     </div>
 
                 </div>
-                <div class="col s12 m6 white ">
-                    <div class="compForm">
+                <div class="col s12 m6 white compForm">
                         <form th:action="@{/signup/musician/}" method="post" enctype="multipart/form-data"  >
                             <div th:object="${user}">
                                 <div class="row">
@@ -86,14 +84,23 @@
                                     </div>
                                 </div>
 
-
+                                <div class="row">
+                                    <div class="file-field input-field">
+                                        <div class="btn">
+                                            <span>File</span>
+                                            <input type="file" th:field="*{profPicImage}"/>
+                                        </div>
+                                        <div class="file-path-wrapper">
+                                            <input class="file-path validate" type="text"/>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
 
                         </form>
 
-                    </div>
                 </div>
 
             </div>
@@ -102,7 +109,6 @@
     </main>
     <div th:include="fragments/footer :: footer"></div>
     <div th:include="fragments/modals :: signupModal"></div>
-</div>
 
 
 <span th:include="fragments/includes :: js"></span>
