--- a/src/main/resources/templates/Search/findBands.html
+++ b/src/main/resources/templates/Search/findBands.html
@@ -4,56 +4,32 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body class="gradient-background" th:inline="text">
 <div th:include="fragments/navbar :: navHome"></div>
-<div class="page-flexbox-wrapper">
 
 
     <main class="container findBand">
         <h1 class="white-text center-align">Find Musicians</h1>
         <div class="row">
             <div th:each="musician : ${musicians}" >
-
-
-
                 <div class="col s6 m4 l3  center-align ">
-                    <a sec:authorize="hasRole('ROLE_COMPANY')" th:href="'/company/find-bands/' + @{${musician.id}}" >
-                        <div  th:style="'background:url('+ @{${musician.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 41vh; width: 100%'" class="bandInfo hoverable">
+                    <a th:href="'/find-bands/' + @{${musician.id}}" >
+                        <div  th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musician.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 41vh; width: 100%'" class="bandInfo hoverable">
                             <div class="second">
                                 <div class="hiddenText">
                                     <h5 ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></h5>
                                     <p class="flow-text">[[${musician.musicianInstruments}]]</p>
                                 </div>
                             </div>
-
-
-                        </div>
-                    </a>
-
-
-                    <a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="'/musician/find-bands/' + @{${musician.id}}" >
-
-                        <div  th:style="'background:url('+ @{${musician.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 41vh; width: 100%'" class="bandInfo hoverable">
-                            <div class="second">
-                                <div class="hiddenText">
-                                    <h5 ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></h5>
-                                    <p class="flow-text">[[${musician.musicianInstruments}]]</p>
-                                </div>
-                            </div>
-
-
                         </div>
                     </a>
                 </div>
-
-
-
             </div>
 
         </div>
     </main>
 
     <div th:include="fragments/footer :: footer"></div>
-</div>
 
+<div th:include="fragments/modals :: signupModal"></div>
 
 <span th:include="fragments/includes :: js"></span>
 </body>
