--- a/src/main/resources/templates/Search/search.html
+++ b/src/main/resources/templates/Search/search.html
@@ -5,7 +5,6 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body th:inline="text" class="search">
 <div th:include="fragments/navbar :: navHome"></div>
-<div class="page-flexbox-wrapper">
 
     <main >
         <div class="container">
@@ -60,31 +59,18 @@
             <h1 class="center-align white-text">Search for Musicians</h1>
             <div class="card-panel">
                 <div class="section">
-                    <form th:action="@{/searchName}" method="post" class="white-text">
-                        <div class=" section ">
-                            <div class="row">
-                                <div class="col s6">
-                                    <div class="input-field ">
-                                        <i class="orange-text text-accent-4 material-icons prefix">account_circle</i>
+                    <form th:action="@{/searchMusician}" method="post" class="white-text">
+                        <div class="section ">
+                            <div class="input-field">
+                                <i class="orange-text text-accent-4 material-icons prefix">location_on</i>
 
-                                        <input placeholder="Search First Name" id="first_name" type="text" name="firstName" class="validate"/>
-                                        <label for="first_name">First Name</label>
-                                    </div>
-
-                                </div>
-                                <div class="col s6">
-                                    <div class="input-field ">
-                                        <input placeholder="Search Last Name" id="last_name" type="text" name="lastName" class="validate"/>
-                                        <label for="last_name">Last Name</label>
-                                    </div>
-                                </div>
+                                <input type="text" placeholder="Search" name="search" id="search"/>
+                                <label for="search">Search</label>
                             </div>
-
                             <div class="right">
-                                <button class="btn orange accent-4 " type="submit">Search</button>
+                                <button class="btn orange accent-4" type="submit">Search</button>
 
                             </div>
-
                         </div>
                     </form>
                 </div>
@@ -106,44 +92,34 @@
                         </div>
                     </form>
                 </div>
-                <div class="section">
-                    <form th:action="@{/searchLocation}" method="post" class="white-text">
-                        <div class="section ">
-                            <div class="input-field">
-                                <i class="orange-text text-accent-4 material-icons prefix">location_on</i>
-
-                                <input type="text" placeholder="Search by Location" name="location" id="location"/>
-                                <label for="location">Location</label>
-                            </div>
-                            <div class="right">
-                                <button class="btn orange accent-4" type="submit">Search</button>
-
-                            </div>
-                        </div>
-                    </form>
-                </div>
             </div>
+
+
+
 
         </div>
         <div class="divider"></div>
-        <section class="searchResult container">
+        <section class="searchResult container ">
             <h1 class="center-align white-text">Search Results</h1>
             <div sec:authorize="hasRole('ROLE_COMPANY')">
-                <div class="row">
-                    <div  th:each="musician : ${musician}">
-                        <div class="col s12 m4 l3  center-align ">
-                            <a sec:authorize="hasRole('ROLE_COMPANY')" th:href="'/company/find-bands/' + @{${musician.id}}" >
-                                <div  th:style="'background:url('+ @{${musician.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 41vh; width: 100%'" class="bandInfo hoverable">
-                                    <div class="second">
-                                        <div class="hiddenText">
-                                            <h5 ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></h5>
-                                            <p class="flow-text">[[${musician.musicianInstruments}]]</p>
+                <div class="findBand">
+
+                    <div class="row">
+                        <div  th:each="musician : ${musician}">
+                            <div class="col s12 m4 l3  center-align ">
+                                <a th:href="'/find-bands/' + @{${musician.id}}" >
+                                    <div  th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musician.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 41vh; width: 100%'" class="bandInfo hoverable">
+                                        <div class="second">
+                                            <div class="hiddenText">
+                                                <h5 ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></h5>
+                                                <p>[[${musician.musicianInstruments}]]</p>
+                                            </div>
                                         </div>
+
+
                                     </div>
-
-
-                                </div>
-                            </a>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -155,7 +131,7 @@
                     <div th:each="gig : ${gig}" class="col s12 m6 l3">
 
                         <div class="gigCard z-depth-2">
-                            <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                            <div class="gigImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
                                 <div class="dateBox white orange-text text-accent-4 center-align">
                                     <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
                                     <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
@@ -165,7 +141,7 @@
                                 <p><b>[[${gig.gigTitle}]]</b></p>
                                 <p >[[${gig.gigLocation}]]</p>
                                 <div class="divider"></div>
-                                <a class=" waves-effect waves-light orange-text text-accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">Details</a>
+                                <a class=" waves-effect waves-light orange-text text-accent-4 hoverable gigApplied " th:href="'/gig/' + @{${gig.id}}">Details</a>
 
                             </div>
                         </div>
@@ -181,7 +157,6 @@
 
 
     <div th:include="fragments/footer :: footer"></div>
-</div>
 
 <span th:include="fragments/includes :: js"></span>
 </body>
