--- a/src/main/resources/templates/gigDetails.html
+++ b/src/main/resources/templates/gigDetails.html
@@ -4,10 +4,9 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body th:inline="text" id="gigPage" class="gradient-background ">
 <div th:include="fragments/navbar :: navHome"></div>
-<div class="page-flexbox-wrapper">
 
     <main  class="gigDetails">
-        <div class="background-image hide-on-med-and-down" th:style="'background:url('+ @{${gig.gigArt}}+')no-repeat center ; background-size: cover;' "></div>
+        <div class="background-image hide-on-med-and-down" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+')no-repeat center ; background-size: cover;' "></div>
 
         <div class="container">
             <div class="gig ">
@@ -32,7 +31,7 @@
                 </div>
                 <div class="gig-info">
                     <div class="gig-left">
-                        <section class="gig-image white" th:style="'background:url('+ @{${gig.gigArt}}+') no-repeat center ; background-size: cover'">
+                        <section class="gig-image white" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+') no-repeat center ; background-size: cover'">
                             <div class="details-row white-text">
                                 <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
 
@@ -95,13 +94,8 @@
                                     <h4 >Hired<i class="checkmark material-icons">check</i></h4>
                                     <div th:each="hired : ${hired}">
 
-                                        <a sec:authorize="hasRole('ROLE_COMPANY')" th:href="'/company/find-bands/' + @{${hired.musicianProfile.id}}" >
-                                            <img th:src="@{${hired.musicianProfile.profPicImage}} " class="cardImage hiredImage circle"/>
-                                            <h5 class="black-text"><b>[[${hired.musicianProfile.firstName}]] [[${hired.musicianProfile.lastName}]]</b></h5>
-                                        </a>
-
-                                        <a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="'/musician/find-bands/' + @{${applied.musicianProfile.id}}">
-                                            <img th:src="@{${hired.musicianProfile.profPicImage}} " class="cardImage hiredImage circle"/>
+                                        <a th:href="'/find-bands/' + @{${hired.musicianProfile.id}}" >
+                                            <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.musicianProfile.profPicImage}} " class="cardImage hiredImage circle"/>
                                             <h5 class="black-text"><b>[[${hired.musicianProfile.firstName}]] [[${hired.musicianProfile.lastName}]]</b></h5>
                                         </a>
                                     </div>
@@ -115,13 +109,9 @@
                                         <div class="row">
                                             <div th:each="applied : ${applied}">
                                                 <div class="container">
-
                                                     <div class="col s6 m4">
-                                                        <a sec:authorize="hasRole('ROLE_COMPANY')" th:href="'/company/find-bands/' + @{${applied.musicianProfile.id}}" >
-                                                            <img th:src="${applied.musicianProfile.profPicImage}" alt="" class="bandInfo hoverable bandApplied" />
-                                                        </a>
-                                                        <a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="'/musician/find-bands/' + @{${applied.musicianProfile.id}}" >
-                                                            <img th:src="${applied.musicianProfile.profPicImage}" alt="" class="bandInfo hoverable bandApplied" />
+                                                        <a th:href="'/find-bands/' + @{${applied.musicianProfile.id}}" >
+                                                            <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}}" alt="" class="bandInfo hoverable bandApplied" />
                                                         </a>
                                                     </div>
                                                 </div>
@@ -140,7 +130,7 @@
                                             <li th:each="applied : ${applied}">
                                                 <a th:href="'/company/gig/' + @{${gig.id}} + '/confirm-hire/musician/' + @{${applied.musicianProfile.id}}" data-constrainwidth="false">
                                                     <div class="hireRow">
-                                                        <img th:src="@{${applied.musicianProfile.profPicImage}} " class="navAvatar circle"/>
+                                                        <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}} " class="navAvatar circle"/>
                                                         <p>[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
                                                         <div class="divider"></div>
                                                     </div>
@@ -166,20 +156,10 @@
             </div>
 
         </div>
-
-
-
-
-
-
-
-
-
     </main>
     <div th:include="fragments/modals :: gigUpdate"></div>
     <div th:include="fragments/modals :: gigDelete"></div>
     <div th:include="fragments/footer :: footer"></div>
-</div>
 
 
 <span th:include="fragments/includes :: js"></span>
