--- a/src/main/resources/templates/musicianDetails.html
+++ b/src/main/resources/templates/musicianDetails.html
@@ -3,16 +3,15 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
 <body class="grey lighten-1 music-details" th:inline="text">
-<div class="page-flexbox-wrapper">
 
     <main >
-        <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianDetail.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+        <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianDetail.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
             <div th:include="fragments/navbar :: navHome"></div>
             <div class="hide-on-med-and-down">
                 <div class="details-row white-text">
                     <div class="row">
                         <div class="col s6 offset-s5">
-                            <h3>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]] -- <span><small>[[${musicianProfile.location}]]</small></span></h3>
+                            <h3>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]] -- <span><small>[[${musicianDetail.location}]]</small></span></h3>
 
                         </div>
                     </div>
@@ -23,7 +22,7 @@
 
             <div class="show-on-medium-and-down hide-on-large-only">
                 <div class="tab-profile white-text">
-                    <div class="circle tab-profPic profImage" th:style="'background:url('+ @{${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; width: 200px; height: 200px;'">
+                    <div class="circle tab-profPic profImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; width: 200px; height: 200px;'">
                     </div>
                     <h4>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]]</h4>
                     <h5 > [[${musicianDetail.location}]]</h5>
@@ -37,7 +36,7 @@
                 <div class="row-content">
                     <div class="profile-info">
                         <div class="profCol z-depth-5">
-                            <div class="profImage" th:style="'background:url('+ @{${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
+                            <div class="profImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
 
                             </div>
                             <div class="profInfo white">
@@ -110,7 +109,7 @@
                                 <div class="row"  >
                                     <div class="col s12 m6" th:each="hired : ${hired}">
                                         <div  class="gigCard hoverable">
-                                            <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                            <div class="gigImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
                                                 <div class="dateBox white orange-text text-accent-4 center-align">
                                                     <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
                                                     <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
@@ -200,7 +199,7 @@
                     <div class="row"  >
                         <div class="col s12 m4" th:each="hired : ${hired}">
                             <div  class="gigCard hoverable">
-                                <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                <div class="gigImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
                                     <div class="dateBox white orange-text text-accent-4 center-align">
                                         <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
                                         <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
@@ -227,7 +226,6 @@
 
 
     <div th:include="fragments/footer :: footer"></div>
-</div>
 
 
 <span th:include="fragments/includes :: js"></span>
